--- a/bb-client/package.json
+++ b/bb-client/package.json
@@ -24,7 +24,10 @@
     "server": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src/**/*.{js,jsx,ts,tsx} --fix",
+    "prettier": "prettier --write src/**/*.{js,jsx,ts,tsx,json,css,md}",
+    "format": "npm run lint && npm run prettier"
   },
   "eslintConfig": {
     "extends": [
