--- a/bb-client/package.json
+++ b/bb-client/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-button": "^0.8.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "sqlite3": "^5.1.7",
