--- a/bb-client/package.json
+++ b/bb-client/package.json
@@ -13,10 +13,12 @@
     "@types/react-dom": "^18.3.1",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-google-button": "^0.8.0",
     "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "sqlite3": "^5.1.7",
@@ -52,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.14",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^8.11.0",
     "@typescript-eslint/parser": "^8.11.0",
